# GTAV-SLMS

./: .gitignore  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
configs/: inference.yaml  training.yaml
configs/modes/: bike.yaml  car.yaml  helicopter.yaml  plane.yaml  walking.yaml
data/collectors/: input_logger.py  screen_capture.py
data/processing/: dataset_builder.py
envs/: gta_env.py  mode_detector.py
inference/: action_executor.py  runner.py
models/: __init__.py  backbone_factory.py  base_model.py  bike_model.py  car_model.py  helicopter_model.py  plane_model.py  walking_model.py
tests/: __init__.py  conftest.py  test_backbones.py  test_models.py  test_registry.py
training/: behavioral_cloning.py  trainer.py
utils/: input_mapping.py  registry.py  visualization.py
